Bug 158759 - bmw-motorrad.co.uk page fails to render correctly in konqueror
Summary: bmw-motorrad.co.uk page fails to render correctly in konqueror
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-03-04 12:42 UTC by James
Modified: 2008-03-10 18:33 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screen shot of page rendering incorrectly. (434.59 KB, image/png)
2008-03-04 12:44 UTC, James
Details

Note You need to log in before you can comment on or make changes to this bug.
Description James 2008-03-04 12:42:08 UTC
Version:            (using KDE 3.5.9)
Installed from:    Ubuntu Packages
OS:                Linux

I have recently switched from Firefox to Konqueror as my default browser to test it out. Since doing that (about 6 weeks ago) several pages I visit regularly do not render correctly. One of the bigger sites is http://www.bmw-motorrad.co.uk/ the embedded flash video for this web page overlays on top of the entire page making the menus impossible to find or use. I have attached a screenshot for a better visual description of the problem.
Comment 1 James 2008-03-04 12:44:47 UTC
Created attachment 23783 [details]
Screen shot of page rendering incorrectly.

This  is a screenshot of the problem occurring, This is similar to other pages
with the same "style" of page rendering incorrectly. In each case its with
flash video over the top of the menu items or other items.
Comment 2 James 2008-03-04 12:45:18 UTC
I have had this problem with 3.5.8 and 4.0.1 in both cases using the Ubuntu packages.
Comment 3 FiNeX 2008-03-04 14:09:26 UTC
Bug confirmed
Comment 4 Germain Garand 2008-03-04 22:48:20 UTC
Flash plugin on linux doesn't support transparent wmode, so
this is no bug, but ordinary User Agent detection stuff.

Tool->Change Browser Identification->Other->FireFox

OTOH, Konqueror supports rudimentary stacking of Flash objects, so if the plugin is correctly z-order stacked, which remains to be demonstrated, it would be possible to let it degrade gracefully by ameliorating the plugin stacking logic.

Comment 5 Germain Garand 2008-03-04 23:01:53 UTC
So within same root stacking context, we have navigational stuff at

#mainNavi  {position:absolute; z-index:  919;}

and plugin container at

#completePageContent  {position:absolute;}
    -->#visual {position:relative; z-index: 15;}

So stacking appears correct, and graceful fallback possible.
Comment 6 Maksim Orlovich 2008-03-05 02:54:50 UTC
There seems to be some regression in plugin stacking though --- see menus @ nvidia.com
Comment 7 Germain Garand 2008-03-06 02:36:03 UTC
re #6: not really a regression, as 3.5.x exhibit the same behaviour.
But yes, shortcomings of current implementation are really ennoying.
I'll hopefully have a look in the coming days.
Comment 8 Germain Garand 2008-03-10 18:33:26 UTC
SVN commit 784122 by ggarand:

ameliorate the algorithm computing z-order mask for external
widgets so that it also walk parent stacking contexts.

This should take care of all remaining cases of dhtml menus being
displayed behind Flash/Java widgets.

BUG: 158759


 M  +41 -4     render_layer.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=784122