ameliorate the algorithm computing z-order mask for external widgets so that it also walk parent stacking contexts.

This should take care of all remaining cases of dhtml menus being
displayed behind Flash/Java widgets.

BUG: 158759

svn path=/trunk/KDE/kdelibs/; revision=784122